fixed store raunbow z-index

--- a/src/features/shop/shop.scss
+++ b/src/features/shop/shop.scss
@@ -13,6 +13,7 @@
       position: absolute;
       bottom: -17px;
       right: 4%;
+      z-index: 100;
     }
   }
 
@@ -102,7 +103,6 @@
       svg {
         bottom: -70px;
         right: 1%;
-        z-index: 2000;
       }
     }
     .shopItems--container {
